--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,4 +1,6 @@
-Django==4.0.7
+Django==4.1
 django-storages==1.12.3
 gunicorn==20.1.0
 psycopg2-binary==2.9.3
+django-cleanup==6.0.0
+django-markdownify==0.9.2
