--- a/nginx/conf.d/django.conf
+++ b/nginx/conf.d/django.conf
@@ -6,6 +6,14 @@ server {
 
     listen 80;
 
+    location /static/ {
+        alias /var/www/static/;
+    }
+
+    location /media/ {
+        alias /var/www/media/;
+    }
+
     location / {
         proxy_pass http://django;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
